Dockerize the app

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: rabbitmq
   rabbitmq:
-    host: localhost
+    host: rabbit-mq
     port: 5672
     username: guest
     password: guest
